TelegramBotService added Done getting and receiving messages.

--- a/appsettings.json
+++ b/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BotToken": "5612885286:AAG0C9ZiV8UhyRLfAFHUc4Lh-w4G-1nAksw"
 }
