connectionString moved to appsettings.json

--- a/appsettings.json
+++ b/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "BotToken": "5612885286:AAG0C9ZiV8UhyRLfAFHUc4Lh-w4G-1nAksw"
+  "BotToken": "5612885286:AAG0C9ZiV8UhyRLfAFHUc4Lh-w4G-1nAksw",
+  "ConnectionString" : "Server=MYSQL8001.site4now.net;port=3306;Database=db_a8d48b_tg;password=R6vS#Jp_SC2VC!5;uid=a8d48b_tg"
 }
